--- a/frontend/src/index.template.html
+++ b/frontend/src/index.template.html
@@ -21,6 +21,16 @@
     })(window,document,'script','dataLayer','GTM-PKXB56Z');</script>
     <!-- End Google Tag Manager -->
 
+    <!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-DR3CEE9M49"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-DR3CEE9M49');
+</script>
+
   </head>
   <body>
     <!-- DO NOT touch the following DIV -->
